--- a/FinalProjectFrontEnd/app/src/main/res/layout/activity_addtoilet.xml
+++ b/FinalProjectFrontEnd/app/src/main/res/layout/activity_addtoilet.xml
@@ -1,67 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="#ffffff">
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="180dp" >
 
-    <fragment
-        android:id="@+id/fetchaddressMap"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
-    </FrameLayout>
+        android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text = "Name of Location"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd = "30dp"
-        android:layout_marginTop = "200dp"
-        android:id = "@+id/locationName"
-        android:layout_centerHorizontal="true" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd = "30dp"
-        android:layout_marginTop = "20dp"
-        android:id = "@+id/addressField"
-        android:text = "address will show up here when location selected on google maps"
-        android:layout_below = "@id/locationName"/>
-    <Button
-        android:layout_width="80dp"
-        android:layout_marginTop = "25dp"
-        android:layout_height="wrap_content"
-        android:text = "Disabled Access"
-        android:id = "@+id/disabledAccess"
-        android:textColor = "#000000"
-        android:background="#ffffff"
-        android:layout_marginStart = "50dp"
-        android:layout_below = "@id/addressField"/>
-    <Button
-        android:layout_width="80dp"
-        android:layout_marginTop = "25dp"
-        android:layout_height="wrap_content"
-        android:text = "Requires Key"
-        android:id = "@+id/requiresKey"
-        android:textColor = "#000000"
-        android:background="#ffffff"
-        android:layout_toEndOf="@id/disabledAccess"
-        android:layout_marginStart = "50dp"
-        android:layout_below = "@id/addressField"/>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="29dp"
-        android:textColor="@android:color/background_dark"
-        android:background="#ffffff"
-        android:text="ADD TOILET"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+            <fragment
+                android:id="@+id/fetchaddressMap"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
 
-</RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/buttonGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="26dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <EditText
+                android:id="@+id/locationName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:layout_marginStart="40dp"
+                android:backgroundTint="@color/colorAccent"
+                android:textColor="#000"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:hint="Toilet Location Name"
+                android:textColorHint="#37000000"
+                />
+
+            <TextView
+                android:id="@+id/addressField"
+                android:layout_width="295dp"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/locationName"
+                android:layout_below="@+id/locationName"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="3131 McClintock Avenue 90007 Los Angeles"
+                android:textColor="#000" />
+
+            <TextView
+                android:id="@+id/line"
+                style="?android:attr/listSeparatorTextViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/addressField"
+                android:layout_margin="20dp"
+                android:background="#37000000"
+                android:gravity="center_horizontal"
+                android:paddingTop="5dip" />
+
+            <LinearLayout
+                android:id="@+id/specialButtons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/line"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="35dp"
+                android:layout_marginTop="22dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginStart="50dp"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/accessibleIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_accessible_black_24px"
+                        android:tint="@android:color/darker_gray"/>
+
+                    <Button
+                        android:id="@+id/disabledAccess"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/accessibleIcon"
+                        android:layout_weight="1"
+                        android:text="Disabled Access"
+                        android:textColor="@android:color/darker_gray"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginStart="50dp"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/keyIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_vpn_key_black_24px_"
+                        android:tint="@android:color/darker_gray"/>
+
+                    <Button
+                        android:id="@+id/requiresKey"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Requires Key"
+                        android:textColor="@android:color/darker_gray"  />
+                </LinearLayout>
+            </LinearLayout>
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/addToiletButton"
+                android:layout_width="350dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/specialButtons"
+                android:layout_centerHorizontal="true"
+                android:backgroundTint="@color/colorAccent"
+                android:text="ADD TOILET"
+                android:textColor="@android:color/white"
+                android:textSize="15dp"></android.support.v7.widget.AppCompatButton>
+        </RelativeLayout>
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
