--- a/FinalProjectFrontEnd/app/src/main/res/layout/activity_listtoilets.xml
+++ b/FinalProjectFrontEnd/app/src/main/res/layout/activity_listtoilets.xml
@@ -1,20 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="12dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart = "23dp"
+        android:layout_marginStart = "10dp"
         android:id="@+id/list_toiletName"
+        android:layout_marginTop = "10dp"
+        android:text = "Toilet Name"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000000"
         android:layout_alignParentStart="true" />
+
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_toLeftOf="@+id/toiletImage"
+        android:layout_marginEnd="10dp"
+        android:layout_alignTop="@+id/list_toiletName"
+        android:src="@drawable/ic_keyboard_arrow_up_black_24px"
+        android:padding="6dp"
+        android:id="@+id/upArrow"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_toLeftOf="@+id/toiletImage"
+        android:layout_marginEnd="10dp"
+        android:layout_alignTop="@+id/list_toiletName"
+        android:src="@drawable/ic_keyboard_arrow_down_black_24px_"
+        android:id="@+id/downArrow"
+        android:layout_below="@id/upArrow"
+        android:padding="6dp"
+        android:layout_marginTop="50dp"
+        />
+
+    <ImageView
+        android:id="@+id/toiletImage"
         android:layout_width="100dp"
         android:layout_height="120dp"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/holo_orange_light"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/toiletImage"
+        android:layout_alignStart="@+id/list_toiletName"
+        android:id = "@+id/toilet_points"
+        android:textSize="10dp"
+        android:text="  POINTS" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/toiletImage"
+        android:layout_marginStart = "180dp"
+        android:layout_marginEnd="56dp"
+        android:layout_alignBottom="@id/toilet_points"
+        android:src = "@drawable/ic_accessible_black_24px"
+        android:id="@+id/accesibleIconList"
+        />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/toiletImage"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart = "220dp"
+        android:layout_alignBottom="@id/toilet_points"
+        android:src = "@drawable/ic_vpn_key_black_24px_"
+
+        android:id="@+id/keyIconList" />
 
 </RelativeLayout>
