--- a/FinalProjectFrontEnd/app/src/main/res/layout/activity_main.xml
+++ b/FinalProjectFrontEnd/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,17 @@
                 android:layout_width="30dp"
                 android:layout_gravity="center_vertical"
                 android:layout_height="30dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd = "10dp"
                 android:src="@drawable/poop" />
 
             <TextView
             android:id="@+id/title"
+                android:fontFamily="Roboto"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="pooper"
             android:textColor="#000000"
             android:textSize="50dp"
@@ -71,13 +75,14 @@
             android:layout_marginEnd="30dp"
             android:ems="10"
             android:inputType="textPassword"
-            android:text="Name" />
+            />
 
 
     <Button
         android:id="@+id/signInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:background="#ffffff"
         android:text="SIGN IN"
         android:textColor="@android:color/background_dark"
@@ -89,6 +94,7 @@
 
     <Button
         android:id="@+id/signUpButton"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/background_dark"
