--- a/FinalProjectFrontEnd/app/src/main/res/layout/activity_toilet_list_fragment.xml
+++ b/FinalProjectFrontEnd/app/src/main/res/layout/activity_toilet_list_fragment.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
     <ListView
         android:id="@+id/toiletList"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/listFab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "ADD TOILET"
-        android:id="@+id/button_add" />
+        android:layout_gravity="bottom|end|right"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:src="@android:drawable/ic_input_add"
+        app:fabSize="normal"
+        android:clickable="true"
+        app:backgroundTint="@color/colorAccent"
+        android:tint="@android:color/white"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        />
 
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
